--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -5,10 +5,10 @@
 									'main-sidebar--horizontal-event-open-in-sidebar-value': @open_in_sidebar,
 									'main-sidebar--horizontal-event-open-value':            false },
 								class: 'transition-opacity group' do %>
-	<div class="select-none tap-highlight-none bg-white flex">
+	<div class="flex bg-white select-none tap-highlight-none">
 		<div>
 			<div data-controller="ripple"
-					 class="bg-brand-100 rounded-lg h-16 md:h-28 md:w-48 relative ripple ripple-white shadow w-24"
+					 class="relative w-24 h-16 rounded-lg shadow bg-brand-100 md:h-28 md:w-48 ripple ripple-white"
 					 style="background-color: <%= helpers.get_image_dominant_color(@event) %>">
 				<%= link_to event_path(@event),
 										data: {
@@ -27,14 +27,14 @@
 					} rescue nil %>
 				<% end %>
 				<% if helpers.is_new_event? @event %>
-					<div title="Criado nas últimas 24 horas" class="-bottom-2 absolute bg-brand-500 font-semibold left-3 px-1 rounded text-white text-xs">NOVO</div>
+					<div title="Criado nas últimas 24 horas" class="absolute -bottom-2 left-3 px-1 text-xs font-semibold text-white rounded bg-brand-500">NOVO</div>
 				<% end %>
 			</div>
 		</div>
 		<div class="pl-6">
 			<div class="flex items-center space-x-2">
-				<span class="-space-x-2 flex">
-					<% @event.organizers.each do |organizer| %>
+				<span class="flex -space-x-2">
+					<% @event.organizers.order(:id).each do |organizer| %>
 						<%= link_to organizer_path(organizer), class: 'inline-block' do %>
 							<%= image_tag helpers.shrine_image_url(organizer, :sm), {
 								loading: :lazy,
@@ -50,10 +50,12 @@
 				<span class="text-sm text-gray-500">
 							<%= helpers.format_hour @event.start_time %>h
 							</span>
-				<span class="text-sm text-gray-400">·</span>
-				<span class="text-sm text-gray-500">
-					<%= link_to helpers.limit_place_name_size(@event.place_details_name, 30), place_path(@event.place), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:text-brand-600' %>
-				</span>
+				<% unless helpers.mobile_device? %>
+					<span class="text-sm text-gray-400">·</span>
+					<span class="text-sm text-gray-500">
+  					<%= link_to helpers.limit_place_name_size(@event.place_details_name, 30), place_path(@event.place), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:text-brand-600' %>
+  				</span>
+				<% end %>
 			</div>
 			<%= content_tag :a,
 											href:  event_path(@event),
@@ -69,12 +71,19 @@
 				<span class="text-sm text-brand-500">
 					<%= link_to @event&.categories_display_name&.titleize, category_events_path(@event.categories_url), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:text-brand-600' %>
 				</span>
-				<span class="text-sm text-gray-400 px-1">
-					·
+				<span class="px-1 text-sm text-gray-400">
+						·
 				</span>
+				<%= session[:mobile_param] %>
+				<% unless helpers.mobile_device? %>
+					<span class="text-sm text-gray-500">
+					<%= helpers.limit_description_size @event.description %>
+					</span>
+				<% else %>
 				<span class="text-sm text-gray-500">
-				<%= helpers.limit_description_size @event.description %>
+					<%= link_to helpers.limit_place_name_size(@event.place_details_name, 30), place_path(@event.place), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:text-brand-600' %>
 				</span>
+				<% end %>
 			</div>
 			<!--			<div class="text-sm text-gray-500">-->
 			<!--				<%#= helpers.format_hour @event.start_time %>h ·-->
@@ -122,12 +131,12 @@
 				<div class="<%= helpers.class_names('md:group-hover:opacity-100 md:opacity-0 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 text-brand-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform bg-brand-100 hover:bg-brand-200 -mt-1 px-2 py-1 -mt-1',
 																						{ 'ml-5': !@user&.like?(@event) }) %>"
 						 data-controller="share-button"
-						 data-share-button-text="<%= strip_tags(helpers.limit_description_size(@event.description, 160)) %>"
+						 data-share-button-text="<%= strip_tags(helpers.limit_description_size(@event.description)) %>"
 						 data-share-button-title="<%= @event.name %>"
 						 data-share-button-url="<%= event_url(@event, format: :html) %>"
 						 data-action="click->share-button#share">
 					<input class="absolute opacity-0" style="bottom: -30px" data-share-button-target="input" type="text" value="<%= event_url(@event, format: :html) %>">
-					<svg class="h-4 mr-1 stroke-current text-brand-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<svg class="mr-1 h-4 stroke-current text-brand-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"/>
 					</svg>
 					<div>Compartilhar</div>
