Adjust icon in bottom navigator and calendar horizontal events

--- a/web/app/views/components/_bottom-navigation.html.erb
+++ b/web/app/views/components/_bottom-navigation.html.erb
@@ -15,8 +15,8 @@
 					 class="<%= class_names 'cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100',
 																	'text-brand-500': ['feeds', 'events'].include?(controller_name),
 																	'text-gray-600':  !['feeds', 'events'].include?(controller_name) %>">
-				<svg class="fill-current h-5 md:mr-5" viewBox="0 0 20 17" xmlns="http://www.w3.org/2000/svg">
-					<path d="M10 2.69L15 7.19V15H13V9H7V15H5V7.19L10 2.69V2.69ZM10 0L0 9H3V17H9V11H11V17H17V9H20L10 0Z"/>
+				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
 				</svg>
 				Início
 			</div>
@@ -27,10 +27,8 @@
 					 class="<%= class_names 'cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100',
 																	'text-brand-500': current_page?('/minha-agenda'),
 																	'text-gray-600':  !current_page?('/minha-agenda') %>">
-				<svg class="w-5 h-5 md:mr-5" viewBox="0 0 53 53" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path class="stroke-current" d="M49.997 26.4c0 12.924-10.52 23.4-23.498 23.4C13.52 49.8 3 39.324 3 26.4 3 13.477 13.52 3 26.499 3c12.978 0 23.498 10.476 23.498 23.4z" stroke-width="5"/>
-					<path class="fill-current" d="M21.685 20.7c0 2.154-1.755 3.9-3.92 3.9s-3.92-1.746-3.92-3.9 1.755-3.9 3.92-3.9 3.92 1.746 3.92 3.9zM39.152 20.7c0 2.154-1.755 3.9-3.92 3.9-2.164 0-3.92-1.746-3.92-3.9s1.756-3.9 3.92-3.9c2.165 0 3.92 1.746 3.92 3.9z"/>
-					<path class="fill-current" fill-rule="evenodd" clip-rule="evenodd" d="M14.448 32.654c0-.001 0-.002 2.29-1.129s2.29-1.128 2.29-1.129l-.001-.001-.002-.004-.002-.005-.003-.004.008.015.066.114c.066.111.175.287.33.505.31.44.788 1.035 1.441 1.627 1.292 1.172 3.214 2.3 5.935 2.3 2.72 0 4.643-1.127 5.935-2.3a10.061 10.061 0 001.441-1.627 7.715 7.715 0 00.396-.62l.008-.014-.003.004-.002.005-.002.004v.001c-.001.001-.002.002 2.289 1.129s2.29 1.128 2.29 1.129l-.001.002-.003.005-.006.011a3.123 3.123 0 01-.06.115 12.646 12.646 0 01-.697 1.103 15.127 15.127 0 01-2.175 2.455c-1.979 1.796-5.087 3.637-9.41 3.637s-7.431-1.84-9.41-3.637a15.127 15.127 0 01-2.174-2.455 12.687 12.687 0 01-.697-1.103 5.984 5.984 0 01-.046-.085l-.015-.03-.006-.011-.003-.005v-.002z"/>
+				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
 				</svg>
 				Agenda
 			</div>
