--- a/web/app/components/main_sidebar/large_event_component.html.erb
+++ b/web/app/components/main_sidebar/large_event_component.html.erb
@@ -6,20 +6,20 @@
 	<% if @event %>
 		<div class="flex fixed top-0 left-0 items-center w-screen h-screen transition-all duration-300 transform"
 				 style="background: #abacbfeb">
-			<% if helpers.already_happened? @event %>
-				<div class="flex items-center p-3 mx-4 mt-1 mb-3 space-x-2 max-w-screen-lg text-sm font-semibold rounded-lg bg-brand-100 border-brand-200 md:mb-0 md:mt-5 md:mx-auto text-brand-600">
-					<div class="flex flex-shrink-0 justify-center items-center mx-auto w-12 h-12 rounded-full bg-brand-100 sm:mx-0 sm:h-10 sm:w-10">
-						<!-- Heroicon name: exclamation -->
-						<svg class="w-6 h-6 text-brand-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"/>
-						</svg>
-					</div>
-					<div>
-						Este evento já ocorreu <%= I18n.l(@event.end_time) if @event&.end_time %>.
-					</div>
-				</div>
-			<% end %>
 			<div class="overflow-hidden relative z-20 mx-auto max-w-2xl bg-white rounded-xl shadow-2xl h-screen-9/10">
+				<% if helpers.already_happened? @event %>
+					<div class="flex items-center p-3 mx-4 mb-3 space-x-2 max-w-screen-lg text-sm font-semibold rounded-lg bg-brand-100 border-brand-200 md:mb-0 md:mx-auto text-brand-600">
+						<div class="flex flex-shrink-0 justify-center items-center mx-auto w-12 h-12 rounded-full bg-brand-100 sm:mx-0 sm:h-10 sm:w-10">
+							<!-- Heroicon name: exclamation -->
+							<svg class="w-6 h-6 text-brand-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"/>
+							</svg>
+						</div>
+						<div>
+							Este evento já ocorreu <%= I18n.l(@event.end_time) if @event&.end_time %>.
+						</div>
+					</div>
+				<% end %>
 				<div data-action="click->main-sidebar--large-event#close" class="fixed absolute top-0 right-0 z-50 p-1 mt-2 mr-7 text-gray-600 bg-white rounded-full shadow transition-transform duration-300 transform cursor-pointer hover:scale-105">
 					<svg class="w-6 h-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<path d="M0 0h24v24H0V0z" fill="none"/>
@@ -31,22 +31,22 @@
 						<div class="aspect-ratio-16/9"></div>
 						<img src="<%= @event.image[:original].try { |image| image.url(public: true) } %>" alt="<%= @event.name %>" class="object-cover object-center absolute top-0 left-0 w-full min-w-full h-full" style="background-color: <%= helpers.get_image_dominant_color(@event) %>">
 					</div>
-					<div class="-mt-6 relative z-20 flex items-center py-2 px-3 space-x-2">
-						<a href="<%= @event.source_url %>" rel="nofollow" target="_blank" class="flex flex-1 justify-center items-center py-2 space-x-2 rounded-full select-none bg-gray-300 text-gray-800 hover:bg-brand-200 hover:text-brand-600 group">
+					<div class="flex relative z-20 items-center py-2 px-3 -mt-6 space-x-2">
+						<a href="<%= @event.source_url %>" rel="nofollow" target="_blank" class="flex flex-1 justify-center items-center py-2 space-x-2 text-gray-800 bg-gray-300 rounded-full select-none hover:bg-brand-200 hover:text-brand-600 group">
 							<div class="font-semibold">Abrir no facebook</div>
-							<svg class="h-5 stroke-current text-gray-700 group-hover:text-brand-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<svg class="h-5 text-gray-700 stroke-current group-hover:text-brand-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"/>
 							</svg>
 						</a>
 						<% if @event.ticket_url %>
-							<a href="<%= @event.ticket_url %>" rel="nofollow" target="_blank" class="flex flex-1 justify-center items-center py-2 space-x-2 rounded-full select-none bg-gray-300 text-gray-800 hover:bg-brand-200 hover:text-brand-600 group">
+							<a href="<%= @event.ticket_url %>" rel="nofollow" target="_blank" class="flex flex-1 justify-center items-center py-2 space-x-2 text-gray-800 bg-gray-300 rounded-full select-none hover:bg-brand-200 hover:text-brand-600 group">
 								<div class="font-semibold">Ingressos</div>
-								<svg class="h-5 stroke-current text-gray-700 group-hover:text-brand-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<svg class="h-5 text-gray-700 stroke-current group-hover:text-brand-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 5v2m0 4v2m0 4v2M5 5a2 2 0 00-2 2v3a2 2 0 110 4v3a2 2 0 002 2h14a2 2 0 002-2v-3a2 2 0 110-4V7a2 2 0 00-2-2H5z"/>
 								</svg>
 							</a>
 						<% end %>
-						<div class="cursor-pointer flex flex-1 justify-center items-center py-2 space-x-2 rounded-full select-none bg-gray-300 text-gray-800 hover:bg-brand-200 hover:text-brand-600 group"
+						<div class="flex flex-1 justify-center items-center py-2 space-x-2 text-gray-800 bg-gray-300 rounded-full cursor-pointer select-none hover:bg-brand-200 hover:text-brand-600 group"
 								 data-controller="share-button"
 								 data-share-button-text="<%= strip_tags(helpers.limit_description_size(@event.description, 160)) %>"
 								 data-share-button-title="<%= @event.name %>"
@@ -54,7 +54,7 @@
 								 data-action="click->share-button#share">
 							<input class="absolute opacity-0" style="bottom: -30px" data-share-button-target="input" type="text" value="<%= event_url(@event, format: :html) %>">
 							<div class="font-semibold">Compartilhar</div>
-							<svg class="h-5 stroke-current text-gray-700 group-hover:text-brand-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<svg class="h-5 text-gray-700 stroke-current group-hover:text-brand-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"/>
 							</svg>
 						</div>
