--- a/web/app/views/pages/privacy.html
+++ b/web/app/views/pages/privacy.html
@@ -12,8 +12,8 @@
 	<div class="space-y-5">
 		<p> Sua privacidade é importante para nós. A política do Alegreme respeita a sua privacidade em relação a
 			qualquer
-			informação que possamos coletar de você em nosso site, <a href="http://www.alegreme.com">
-				http://www.alegreme.com </a>, e outros sites que possuímos e operamos. </p>
+			informação que possamos coletar de você em nosso site, <a href="https://alegreme.com" rel="nofollow">
+				alegreme.com </a>, e outros sites que possuímos e operamos. </p>
 		<p> Pedimos apenas informações pessoais quando realmente precisamos delas para fornecer um serviço para você.
 			Nós
 			coletamos por meios justos e legais, com o seu conhecimento e consentimento. Também informamos por que
@@ -34,16 +34,23 @@
 		<p> Você é livre para recusar a solicitação de suas informações pessoais, com o entendimento de que talvez não
 			possamos
 			lhe fornecer alguns de seus serviços desejados. </p>
-		<p> Dentre alguns dados solicitados de terceiros estão seu nome, email e imagem de perfil da sua conta Google.
+		<h2 class="mt-5 text-xl font-bold">OAuth 2</h2>
+		<p> Dentre alguns dados solicitados de terceiros estão o token que confirma que seu login é autêntico, seu nome,
+			email e imagem de perfil da sua conta Google por meio da <a
+					href="https://developers.google.com/identity/protocols/oauth2/policies" rel="nofollow" class="underline text-brand-600">OAuth 2 do
+				Google</a>.
 			Usaremos
-			estes dados apenas para login e exibição de seu perfil dentro do site <a href="http://www.alegreme.com">http://www.alegreme.com</a>
+			estes dados apenas para login e exibição de seu perfil dentro do site <a href="https://alegreme.com"
+																					 class="" rel="nofollow">https://alegreme.com</a> e aplicativo
+			<a href="https://play.google.com/store/apps/details?id=com.alegreme.app" class="text-brand-600 underline">Alegreme</a>.
 		</p>
+		<h2 class="mt-5 text-xl font-bold">Aceitação dos termos</h2>
 		<p> O seu uso continuado do nosso site será considerado como aceitação das nossas práticas em relação à
 			privacidade
 			e às
 			informações pessoais. Se você tiver alguma dúvida sobre como lidamos com dados de usuários e informações
 			pessoais,
-			não hesite em entrar em contato conosco. </p>
+			não hesite em entrar em contato conosco (<span class="text-brand-600">oi@alegreme.com</span>). </p>
 		<p> Esta política entra em vigor em 20 de agosto de 2019. </p>
 	</div>
 </div>
