--- a/web/app/views/movies/show.html.erb
+++ b/web/app/views/movies/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for :meta_title, "Ver online #{@movie.details_title}" %>
+<% content_for :meta_title, "Ver online #{@movie.title}" %>
 <%= notice %>
 
 <section id="<%= dom_id @movie %>" class="mx-auto mt-12 is-animated md:mt-40 md:overflow-hidden md:rounded-t-lg md:w-6/12">
@@ -6,19 +6,19 @@
 		<div class="flex items-end px-5 pt-10 space-x-5 bg-gray-50">
 			<div class="relative w-32 -mb-5">
 				<div class="absolute z-10 pl-1 pr-2 m-1 text-sm text-gray-800 bg-white rounded-full shadow-sm me-movie__vote">
-					<%= @movie.details_vote_average %> ⭐
+					<%= @movie.rating %> ⭐
 				</div>
 				<%= image_tag(@movie.image[:medium].url(public: true), class: 'h-auto bg-white object-cover rounded-lg shadow-lg w-32', style: 'min-height: 195px') if @movie.image %>
 			</div>
 			<div class="pb-3 flex-1">
 				<h1 class="inline-block my-3 text-xl font-semibold leading-tight text-gray-900">
-					<%= @movie.details_title %>
+					<%= @movie.title %>
 				</h1>
 				<div class="mb-3 -mt-3 text-sm antialiased  text-gray-600">
-					<%= @movie.details_genres.join(", ") %>
+					<%= @movie.genres.join(", ") %>
 				</div>
-				<% if @movie.details_trailler %>
-					<a href="<%= @movie.details_trailler %>">
+				<% if @movie.trailer %>
+					<a href="<%= @movie.trailer %>">
 						<div class="bg-white flex font-medium px-2 py-1 rounded-full text-gray-600 w-content">
 							<svg class="w-5 mr-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 								<path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 13.5v-7c0-.41.47-.65.8-.4l4.67 3.5c.27.2.27.6 0 .8l-4.67 3.5c-.33.25-.8.01-.8-.4z"/>
@@ -84,7 +84,7 @@
 				Sinopse
 			</h2>
 			<div class="my-3 antialiased  leading-6 text-gray-600">
-				<%= @movie.details_description %>
+				<%= @movie.description %>
 				<% if current_user&.admin? %>
 					<%= link_to "Editar", edit_movie_path(@movie) %>
 				<% end %>
